syntax = "proto3";

package bgs.protocol.account.v1;

// Java generation options
option java_package = "br.net.dd.netherwingcore.proto.client";
option java_outer_classname = "AccountTypesProto";
option optimize_for = CODE_SIZE;

import "br/net/dd/netherwingcore/proto/client/entity_types.proto";
import "br/net/dd/netherwingcore/proto/client/rpc_types.proto";

// Unique identifier for an account.
message AccountId {
  fixed32 id = 1;
}

// License information for an account.
message AccountLicense {
  uint32 id = 1;
  uint64 expires = 2;
}

// Handle for identifying a game account.
message GameAccountHandle {
  fixed32 id = 1;
  fixed32 program = 2;
  uint32 region = 3;
}

// Account reference including email and handle.
message AccountReference {
  fixed32 id = 1;
  string email = 2;
  GameAccountHandle handle = 3;
  string battle_tag = 4;
  uint32 region = 10;
}

// Used to identify accounts and game accounts under a process.
message Identity {
  AccountId account = 1;
  GameAccountHandle game_account = 2;
  bgs.protocol.ProcessId process = 3;
}

// Tags for programs.
message ProgramTag {
  fixed32 program = 1;
  fixed32 tag = 2;
}

// Tags for regions.
message RegionTag {
  fixed32 region = 1;
  fixed32 tag = 2;
}

// Tags for different account fields.
message AccountFieldTags {
  fixed32 account_level_info_tag = 2;
  fixed32 privacy_info_tag = 3;
  fixed32 parental_control_info_tag = 4;
  repeated ProgramTag game_level_info_tags = 7;
  repeated ProgramTag game_status_tags = 9;
  repeated RegionTag game_account_tags = 11;
}

// Tags for game account fields.
message GameAccountFieldTags {
  fixed32 game_level_info_tag = 2;
  fixed32 game_time_info_tag = 3;
  fixed32 game_status_tag = 4;
  fixed32 raf_info_tag = 5;
}

// Options for which fields of an account to include.
message AccountFieldOptions {
  bool all_fields = 1;
  bool field_account_level_info = 2;
  bool field_privacy_info = 3;
  bool field_parental_control_info = 4;
  bool field_game_level_info = 6;
  bool field_game_status = 7;
  bool field_game_accounts = 8;
}

// Options for which fields of a game account to include.
message GameAccountFieldOptions {
  bool all_fields = 1;
  bool field_game_level_info = 2;
  bool field_game_time_info = 3;
  bool field_game_status = 4;
  bool field_raf_info = 5;
}

// Reference to a subscriber.
message SubscriberReference {
  uint64 object_id = 1;
  bgs.protocol.EntityId entity_id = 2;
  AccountFieldOptions account_options = 3;
  AccountFieldTags account_tags = 4;
  GameAccountFieldOptions game_account_options = 5;
  GameAccountFieldTags game_account_tags = 6;
  uint64 subscriber_id = 7;
}

// Information about the account level.
message AccountLevelInfo {
  repeated AccountLicense licenses = 3;
  fixed32 default_currency = 4;
  string country = 5;
  uint32 preferred_region = 6;
  string full_name = 7;
  string battle_tag = 8;
  bool muted = 9;
  bool manual_review = 10;
  bool account_paid_any = 11;
  IdentityVerificationStatus identity_check_status = 12;
  string email = 13;
  bool headless_account = 14;
  bool test_account = 15;
  repeated AccountRestriction restriction = 16;
  bool is_sms_protected = 17;
}

// Privacy settings for the account.
message PrivacyInfo {
  bool is_using_rid = 3;
  bool is_visible_for_view_friends = 4;
  bool is_hidden_from_friend_finder = 5;
  GameInfoPrivacy game_info_privacy = 6;
  bool only_allow_friend_whispers = 7;

  enum GameInfoPrivacy {
    PRIVACY_ME = 0;
    PRIVACY_FRIENDS = 1;
    PRIVACY_EVERYONE = 2;
  }
}

// Parental control information.
message ParentalControlInfo {
  string timezone = 3;
  uint32 minutes_per_day = 4;
  uint32 minutes_per_week = 5;
  bool can_receive_voice = 6;
  bool can_send_voice = 7;
  repeated bool play_schedule = 8;
  bool can_join_group = 9;
  bool can_use_profile = 10;
}

// Information on a game such as trial, name, and program.
message GameLevelInfo {
  bool is_trial = 4;
  bool is_lifetime = 5;
  bool is_restricted = 6;
  bool is_beta = 7;
  string name = 8;
  fixed32 program = 9;
  repeated AccountLicense licenses = 10;
  uint32 realm_permissions = 11;
}

// Details about game time for a game account.
message GameTimeInfo {
  bool is_unlimited_play_time = 3;
  uint64 play_time_expires = 5;
  bool is_subscription = 6;
  bool is_recurring_subscription = 7;
}

// Remaining time information for a game account.
message GameTimeRemainingInfo {
  uint32 minutes_remaining = 1;
  uint32 parental_daily_minutes_remaining = 2;
  uint32 parental_weekly_minutes_remaining = 3;
  uint32 seconds_remaining_until_kick = 4; // deprecated in C++
}

// Suspension, ban, and lock state for a game account.
message GameStatus {
  bool is_suspended = 4;
  bool is_banned = 5;
  uint64 suspension_expires = 6;
  fixed32 program = 7;
  bool is_locked = 8;
  bool is_bam_unlockable = 9;
}

// Refer-a-friend (RAF) information.
message RAFInfo {
  bytes raf_info = 1;
}

// Game session information, including time and location.
message GameSessionInfo {
  uint32 start_time = 3; // deprecated in C++
  GameSessionLocation location = 4;
  bool has_benefactor = 5;
  bool is_using_igr = 6;
  bool parental_controls_active = 7;
  uint64 start_time_sec = 8;
  IgrId igr_id = 9;
}

// Game session update info (mainly for CAIS).
message GameSessionUpdateInfo {
  CAIS cais = 8;
}

// Location info for a game session.
message GameSessionLocation {
  string ip_address = 1;
  uint32 country = 2;
  string city = 3;
}

// CAIS information: time played, rested, etc.
message CAIS {
  uint32 played_minutes = 1;
  uint32 rested_minutes = 2;
  uint64 last_heard_time = 3;
}

// List of game accounts belonging to a region.
message GameAccountList {
  uint32 region = 3;
  repeated GameAccountHandle handle = 4;
}

// State of an account, including privacy, parental controls, etc.
message AccountState {
  AccountLevelInfo account_level_info = 1;
  PrivacyInfo privacy_info = 2;
  ParentalControlInfo parental_control_info = 3;
  repeated GameLevelInfo game_level_info = 5;
  repeated GameStatus game_status = 6;
  repeated GameAccountList game_accounts = 7;
}

// Account state tagged with its tags.
message AccountStateTagged {
  AccountState account_state = 1;
  AccountFieldTags account_tags = 2;
}

// State of a game account, including game time, status, etc.
message GameAccountState {
  GameLevelInfo game_level_info = 1;
  GameTimeInfo game_time_info = 2;
  GameStatus game_status = 3;
  RAFInfo raf_info = 4;
}

// Tagged state of a game account.
message GameAccountStateTagged {
  GameAccountState game_account_state = 1;
  GameAccountFieldTags game_account_tags = 2;
}

// Data that is authorized for the account.
message AuthorizedData {
  string data = 1;
  repeated uint32 license = 2;
}

// IGR (Internet Game Room) identifier (oneof).
message IgrId {
  oneof type {
    GameAccountHandle game_account = 1;
    fixed32 external_id = 2;
  }
}

// IGR address information.
message IgrAddress {
  string client_address = 1;
  uint32 region = 2;
}

// Restriction info, such as bans and suspensions.
message AccountRestriction {
  uint32 restriction_id = 1;
  fixed32 program = 2;
  RestrictionType type = 3;
  repeated fixed32 platform = 4;
  uint64 expire_time = 5;
  uint64 created_time = 6;
}

// Enum for identity verification status.
enum IdentityVerificationStatus {
  IDENT_NO_DATA = 0;
  IDENT_PENDING = 1;
  IDENT_OVER_18 = 2;
  IDENT_UNDER_18 = 3;
  IDENT_FAILED = 4;
  IDENT_SUCCESS = 5;
  IDENT_SUCC_MNL = 6;
  IDENT_UNKNOWN = 7;
}

// Enum for types of account restriction.
enum RestrictionType {
  UNKNOWN = 0;
  GAME_ACCOUNT_BANNED = 1;
  GAME_ACCOUNT_SUSPENDED = 2;
  ACCOUNT_LOCKED = 3;
  ACCOUNT_SQUELCHED = 4;
  CLUB_MEMBERSHIP_LOCKED = 5;
}