package br.net.dd.netherwingcore.shared.realm;

import br.net.dd.netherwingcore.common.AccountType;
import br.net.dd.netherwingcore.common.LocaleConstant;
import br.net.dd.netherwingcore.common.stuff.DeadlineTimer;
import br.net.dd.netherwingcore.common.stuff.IoContext;
import br.net.dd.netherwingcore.common.stuff.IpAddress;
import br.net.dd.netherwingcore.common.stuff.Resolver;
import br.net.dd.netherwingcore.proto.client.GameUtilitiesServiceProto;

import java.util.ArrayList;
import java.util.HashSet;
import java.util.List;
import java.util.Set;
import java.util.concurrent.locks.ReentrantReadWriteLock;

public class RealmList {

    private static RealmList instance;

    // Declaration of private variables similar to C++.
    private List<RealmBuildInfo> builds;
    private ReentrantReadWriteLock realmsMutex;
    private RealmMap realms;
    private Set<String> subRegions;
    private int updateInterval;
    private DeadlineTimer updateTimer;
    private Resolver resolver;

    // Static method to obtain the Singleton instance (equivalent to the static method and macro in C++)
    public static RealmList getInstance() {
        if (instance == null) {
            synchronized (RealmList.class) {
                if (instance == null) {
                    instance = new RealmList();
                }
            }
        }
        return instance;
    }

    // Private builder
    private RealmList() {
        builds = new ArrayList<>();
        realmsMutex = new ReentrantReadWriteLock();
        realms = new RealmMap();
        subRegions = new HashSet<>();
    }

    // Method for initialization
    public void initialize(IoContext ioContext, int updateInterval) {
        this.updateInterval = updateInterval;
        System.out.println("RealmList initialized with interval: " + updateInterval);
        // This is where the startup tasks would be located.
        updateTimer = new DeadlineTimer();
        resolver = new Resolver();
        loadBuildInfo();
        updateRealms();
    }

    // Method to close connection or clear resources
    public void close() {
        System.out.println("RealmList is closing...");
        // This is where actions that destroy resources would be listed.
        updateTimer.cancel();
    }

    // Method to acquire a Realm by its key.
    public Realm getRealm(Realm.Battlenet.RealmHandle id) {
        realmsMutex.readLock().lock();
        try {
            return realms.get(id);
        } finally {
            realmsMutex.readLock().unlock();
        }
    }

    // Method for retrieving Realm build information
    public RealmBuildInfo getBuildInfo(int build) {
        for (RealmBuildInfo info : builds) {
            if (RealmBuildInfo.build == build) {
                return info;
            }
        }
        return null;
    }

    public int getMinorMajorBugfixVersionForBuild(int build) {
        RealmBuildInfo info = getBuildInfo(build);
        if (info != null) {
            return RealmBuildInfo.majorVersion * 10000 + RealmBuildInfo.minorVersion * 100 + RealmBuildInfo.bugfixVersion;
        }
        return 0;
    }

    public void writeSubRegions(GameUtilitiesServiceProto.GetAllValuesForAttributeResponse response) {
        // Implement the writing of sub-regions in the required format.
    }

    public List<Byte> getRealmEntryJSON(Realm.Battlenet.RealmHandle id, int build) {
        // Adapt the method to return the JSON in the desired format.
        return new ArrayList<>();
    }

    public List<Byte> getRealmList(int build, String subRegion) {
        // Adapt this method to return the list of Realms filtering by 'build' and 'subRegion'.
        return new ArrayList<>();
    }

    public int joinRealm(int realmAddress, int build, IpAddress clientAddress, byte[] clientSecret,
                         LocaleConstant locale, String os, String accountName,
                         GameUtilitiesServiceProto.ClientResponse response) {

        // Add logic to connect to the Realm.
        return 0;
    }

    // Private methods for updating and manipulating Realms
    private void loadBuildInfo() {
        // Implement the logic to load compilation information from the Realm.
    }

    private void updateRealms() {
        // Update Realms list
    }

    private void updateRealm(Realm realm, Realm.Battlenet.RealmHandle id, int build, String name,
                             String address, String localAddr, String localSubmask,
                             int port, int icon, RealmFlags flag, int timezone,
                             AccountType allowedSecurityLevel, float population) {
        // Implement the logic to update an individual Realm.
    }

}
